Optimize project with suggestions

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -601,11 +601,11 @@
    },
    "source": [
     "**Answer: **\n",
-    "**1.Gaussian Naive Bayes:** Naive Bayes is a simple technique for constructing classifiers: models that assign class labels to problem instances, represented as vectors of feature values, where the class labels are drawn from some finite set.(https://en.wikipedia.org/wiki/Naive_Bayes_classifier). It performs pretty well if we want to train the model fast and easily. Its main disadvantage is that it can’t learn interactions between features.Here we have a large data set with few features so that we choose it to train model.\n",
+    "**1.Gaussian Naive Bayes:** Naive Bayes is a simple technique for constructing classifiers: models that assign class labels to problem instances, represented as vectors of feature values, where the class labels are drawn from some finite set.(https://en.wikipedia.org/wiki/Naive_Bayes_classifier). It performs pretty well if we want to train the model fast and easily. Its main disadvantage is that it can’t learn interactions between features.With Gaussian Naive Bayes, we can train the model quickly using less data.\n",
     "\n",
-    "**2.GradientBoostingClassifier:** GradientBoostingClassifier builds trees one at a time, where each new tree helps to correct errors made by previously trained tree. With each tree added, the model becomes even more expressive. There are typically three parameters - number of trees, depth of trees and learning rate, and the each tree built is generally shallow.(https://www.quora.com/What-are-the-advantages-disadvantages-of-using-Gradient-Boosting-over-Random-Forests)It performs quite well but it will take a long time to train model.We choose it here as we want to train a accurate model to predict data.\n",
+    "**2.GradientBoostingClassifier:** GradientBoostingClassifier builds trees one at a time, where each new tree helps to correct errors made by previously trained tree. With each tree added, the model becomes even more expressive. There are typically three parameters - number of trees, depth of trees and learning rate, and the each tree built is generally shallow.(https://www.quora.com/What-are-the-advantages-disadvantages-of-using-Gradient-Boosting-over-Random-Forests)It performs quite well but it will take a long time to train model.In common, GradientBoostingClassifier is a reliable model as it can gurantee the accuracy.\n",
     "\n",
-    "**3.AdaBoostClassifier:**  It can be used in conjunction with many other types of learning algorithms to improve their performance. The output of the other learning algorithms ('weak learners') is combined into a weighted sum that represents the final output of the boosted classifier. AdaBoost is adaptive in the sense that subsequent weak learners are tweaked in favor of those instances misclassified by previous classifiers. AdaBoost is sensitive to noisy data and outliers. In some problems it can be less susceptible to the overfitting problem than other learning algorithms. The individual learners can be weak, but as long as the performance of each one is slightly better than random guessing (e.g., their error rate is smaller than 0.5 for binary classification), the final model can be proven to converge to a strong learner.(https://en.wikipedia.org/wiki/AdaBoost)We want to improve accuracy of predicted model in this case, which is why we choose AdaBoostClassifier."
+    "**3.AdaBoostClassifier:**  It can be used in conjunction with many other types of learning algorithms to improve their performance. The output of the other learning algorithms ('weak learners') is combined into a weighted sum that represents the final output of the boosted classifier. AdaBoost is adaptive in the sense that subsequent weak learners are tweaked in favor of those instances misclassified by previous classifiers. AdaBoost is sensitive to noisy data and outliers. In some problems it can be less susceptible to the overfitting problem than other learning algorithms. The individual learners can be weak, but as long as the performance of each one is slightly better than random guessing (e.g., their error rate is smaller than 0.5 for binary classification), the final model can be proven to converge to a strong learner.(https://en.wikipedia.org/wiki/AdaBoost).We can use AdaBoostClassifier to train the model to improve accuracy because our data set is large but clean enough."
    ]
   },
   {
@@ -803,7 +803,7 @@
     "editable": true
    },
    "source": [
-    "**Answer: ** I prefer AdaBoostClassifier.It performs better than the other two in F-score and accuracy score, while it takes a little time in training, which is quite efficient."
+    "**Answer: ** I prefer AdaBoostClassifier.Both AdaBoostClassifier and GradientBoostingClassifier have higher F-score and accuracy than GaussianNB, so GaussianNB is not a good choice.Then compare AdaBoostClassifier and GradientBoostingClassifier, though GradientBoostingClassifier performs a little bit better than AdaBoostClassifier, it takes much longer time to train the model."
    ]
   },
   {
@@ -824,7 +824,8 @@
     "editable": true
    },
    "source": [
-    "**Answer: ** . AdaBoostClassifier combines many other types of learning algorithms ('weak learners') and improves their performance to genernate a stronger learner."
+    "**Answer: ** . AdaBoost is a type of \"Ensemble Learning\" where multiple learners are employed to build a stronger learning algorithm. AdaBoost works by choosing a base algorithm (e.g. decision trees) and iteratively improving it by accounting for the incorrectly classified examples in the training set. \n",
+    "We assign equal weights to all the training examples and choose a base algorithm. At each step of iteration, we apply the base algorithm to the training set and increase the weights of the incorrectly classified examples. We iterate n times, each time applying base learner on the training set with updated weights. The final model is the weighted sum of the n learners. (https://www.quora.com/What-is-AdaBoost)"
    ]
   },
   {
@@ -1146,7 +1147,7 @@
     "editable": true
    },
    "source": [
-    "**Answer:**The final model's F-score and accuracy score on the reduced data using only five features performs worse than those same scores when all features are used.No, I will use the better model."
+    "**Answer:**The final model's F-score and accuracy score on the reduced data using only five features performs worse than those same scores when all features are used, as when we reduce the data to only five features, the F-score and accuracy of the predictions are also reduced. The classifier lost its accuracy when the complexity of data is decreased.If training time was a factor, using the reduced data can effectively reduce the train time.I think it is acceptable as it would decrese the F-score and accuracy score within a small range."
    ]
   },
   {
